--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
 
   flutter_hooks: ^0.18.0
   hooks_riverpod: ^2.0.0-dev.6
+  path_provider: ^2.0.9
+  flutter_session_manager: ^1.0.3
+  page_transition: "^2.0.5"
+  intl: ^0.17.0
+  freezed_annotation: ^0.14.2
+  json_annotation: ^4.0.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +56,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  build_runner: ^2.0.6
+  freezed: ^0.14.2
+  json_serializable: ^4.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
